--- a/src/css/css.css
+++ b/src/css/css.css
@@ -39,10 +39,10 @@ li {
 }
 
 .img {
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
+  width: 150%;
+  height: 150%;
+  /* max-width: 100%;
+  max-height: 100%; */
 }
 
 .animate {
