--- a/src/css/css.css
+++ b/src/css/css.css
@@ -9,28 +9,27 @@ body {
 li {
   scroll-snap-align: center;
   display: inline-block;
-  border-radius: 3px;
-  font-size: 0;
+  /* border-radius: 3px; */
 }
 
 .section {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .section__heading {
-  margin: 0;
+  margin: 10;
   color: white;
-  font-size: 32px;
-  text-transform: capitalize;
+  /* font-size: 32px;
+  text-transform: capitalize; */
 }
 .main {
   box-sizing: border-box;
   background: black;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  /* font-size: 16px; */
   -webkit-font-smoothing: antialiased;
   /* scroll-behavior: smooth; */
   /**/
@@ -39,8 +38,8 @@ li {
 }
 
 .img {
-  width: 150%;
-  height: 150%;
+  width: 100%;
+  height: 100%;
   /* max-width: 100%;
   max-height: 100%; */
 }
