--- a/src/css/css.css
+++ b/src/css/css.css
@@ -19,12 +19,12 @@ li {
   /* height: 100vh; */
 }
 
-.section__heading {
+/* .section__heading {
   margin: 10;
   color: white;
-  /* font-size: 32px;
-  text-transform: capitalize; */
-}
+  font-size: 32px;
+  text-transform: capitalize;
+} */
 .main {
   box-sizing: border-box;
   background: black;
@@ -40,8 +40,8 @@ li {
 .img {
   width: 100%;
   height: 100%;
-  /* max-width: 100%;
-  max-height: 100%; */
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .animate {
